<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网盘</string>
    <string name="action_settings">Settings</string>
    <string name="account_name">账 号</string>
    <string name="account_psw">密 码</string>
    <string name="login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;陆</string>
    <string name="reg_now">立即注册</string>
    <string name="mywebdisk">我的网盘</string>
    <string name="confirm_quit">再按一次退出网盘</string>
    <string name="download">下载</string>
    <string name="fileinfo">详情</string>
    <string name="copy">复制</string>
    <string name="rename">重命名</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>
    <string name="newfolder">新建文件夹</string>
	<string name="inputfoldername">请输入新的文件夹名</string>
	<string name="confirm">确  定</string>
	<string name="cancel">取消</string>
	<string name="paste">粘贴</string>
	<string name="upload">上传</string>
	<string name="show_upload_folder">文件将上传至：</string>
	<string name="show_download_file">将下载文件：</string>
	<string name="show_copy_file">复制文件：</string>
	<string name="show_move_file">移动文件：</string>
	<string name="show_move_folder">移动文件夹：</string>
	<string name="input_new_file_name">请输入新的文件或文件夹名</string>
	<string name="fileinfo_2">文件详情</string>
	<string name="close">关&#160;&#160;闭</string>
	<string name="delete_2">删&#160;&#160;&#160;&#160;除</string>
	<string name="delete_file">确定要删除此文件：</string>
	<string name="delete_folder">确定要删除此文件夹:</string>
	<string name="login_auth_error">用户名或密码输入错误，请重新输入</string>
	<string name="login_no_connection">网络错误，请检查网络</string>
	<string name="folder_exist">文件夹已经存在，请重新输入文件夹名</string>
	<string name="please_select_file">请选择需要上传的文件</string>
	<string name="sdcard">SDCard</string>
	<string name="file_exist">这个目录中已存在同名文件</string>
	<string name="delete_success">文件已删除</string>
	<string name="delete_error">文件删除失败，请重试</string>
	<string name="save_Psw">记住密码</string>
	<string name="auto_login">自动登录</string>
	<string name="logining">正在登陆&#8230;</string>
	<string name="please_input_new_name">文件名不能为空，请重新输入</string>
	<string name="rename_success">重命名成功</string>
	<string name="rename_error">重命名失败，请重试</string>
	<string name="renaming">正在重命名，请稍后&#8230;</string>
	<string name="move_finish">文件已移动</string>
	<string name="new_folder_success">新建文件夹成功</string>
	<string name="new_folder_error">新建文件夹失败</string>
	<string name="pls_input_loginInfo">请输入用户名或密码</string>
	<string name="info_fileName">文&#160;&#160;件&#160;&#160;名：</string>
	<string name="info_fileSuffix">文件类型：</string>
	
	
	
	
	<string name="FILE">FILE</string>
    <string name="directory_created">Directory is created</string>
	<string name="error">Error</string>
	<string name="verify">Verify</string>
    <string name="exception">Exception</string>
    <string name="success">Success</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="empty">此目录没有文件</string>
    <string name="no_connection_selected">连接中断，请重新连接</string>
    
    
    
	
</resources>