<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_popmenu_fileaction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/group_bg" 
        android:padding="16dp">

        <Button
            android:id="@+id/btn_download"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/icon_download"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_alignLeft="@+id/btn_download"
            android:layout_below="@+id/btn_download"
            android:layout_marginLeft="8dp"
            android:text="@string/download" />

        <Button
            android:id="@+id/btn_fileInfo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/btn_download"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_info" />

        <TextView
            android:id="@+id/tv_fileInfo"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_alignBottom="@+id/tv_download"
            android:layout_centerHorizontal="true"
            android:text="@string/fileinfo" />

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/btn_fileInfo"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/icon_copy"/>

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_alignBottom="@+id/tv_fileInfo"
            android:layout_alignLeft="@+id/btn_copy"
            android:layout_marginLeft="8dp"
            android:text="@string/copy" />

        <Button
            android:id="@+id/btn_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_download"
            android:layout_below="@+id/tv_download"
            android:layout_marginTop="16dp"
            android:background="@drawable/icon_rename" />

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="48dp"
            android:layout_height="16dp"
            android:layout_alignLeft="@+id/btn_rename"
            android:layout_below="@+id/btn_rename"
            android:layout_marginLeft="4dp"
            android:text="@string/rename" />

        <Button
            android:id="@+id/btn_move"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/btn_rename"
            android:layout_alignBottom="@+id/btn_rename"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_move" />

        <TextView
            android:id="@+id/tv_move"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_alignBaseline="@+id/tv_rename"
            android:layout_alignBottom="@+id/tv_rename"
            android:layout_alignLeft="@+id/tv_fileInfo"
            android:layout_marginLeft="3dp"
            android:text="@string/move" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/btn_move"
            android:layout_alignBottom="@+id/btn_move"
            android:layout_alignRight="@+id/btn_copy"
            android:background="@drawable/icon_delete" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_alignBaseline="@+id/tv_move"
            android:layout_alignBottom="@+id/tv_move"
            android:layout_alignLeft="@+id/tv_copy"
            android:layout_marginLeft="3dp"
            android:text="@string/delete" />
        
    </RelativeLayout>

</LinearLayout>